--- a/documentos/templates/documentos/documentos.html
+++ b/documentos/templates/documentos/documentos.html
@@ -6,21 +6,25 @@
 
 {% load static %}
 {% load tipo_documento %}
-{% include "reload.html" %}
+<style>
+  .return {
+    margin-left: 0.4em;
+  }
+</style>
 
 {% for area in areas %}
   {% if user.tipo_de_usuario in area.permissao %}
-    {% if not forloop.first %}<hr>{% endif %}
+    {% if not forloop.first %}<br>{% endif %}
     <h5>Área {{area.titulo}}</h5>
-    <ul>
+    
       {% for documento in area.documentos %}
         {% if documento.0 == "D" %}
           {% include "documento.html" with documento=documentos|tipo_documento:documento.1 nivel=documento.2 %}
         {% elif documento.0 == "L" %}
-          <li><a href="{% url documento.2 %}">{{documento.1}}</a></li>
+          <div class="item_lista"><span class="circulo">&#9899;</span> <a href="{% url documento.2 %}">{{documento.1}}</a></div>
         {% endif %}
       {% endfor %}
-    </ul>
+    
   {% endif %}
 {% endfor %}
 
