--- a/academica/templates/academica/academica.html
+++ b/academica/templates/academica/academica.html
@@ -4,31 +4,19 @@
   Data: 10 de Abril de 2023
 {% endcomment %}
 
-<script>{% include "tooltip.js" %}</script>
-{% include "reload.html" %}
-<style>
-  .inside_ul {
-    list-style-type:none;
-    margin-bottom: 0.8em;
-  }
-</style>
-
 <h5>Áreas de Interesse</h5>
-<ul>
-  <li><a href="{% url 'distribuicao_areas' %}">Tendência de Áreas de Interesse (Estudantes/Propostas/Projetos)</a></li>
-</ul>
+<div class="item_lista"><span class="circulo">&#9899;</span> <a href="{% url 'distribuicao_areas' %}">Tendência de Áreas de Interesse (Estudantes/Propostas/Projetos)</a></div>
+<br>
 
 <h5>Feedbacks das Organizações Parceiras</h5>
-<ul>
-  <li><a href="{% url 'lista_acompanhamento' %}">Acompanhamento Intermediário</a></li>
-  <li><a href="{% url 'lista_feedback' %}">Comentários Finais</a></li>
-</ul>
+<div class="item_lista"><span class="circulo">&#9899;</span> <a href="{% url 'lista_acompanhamento' %}">Acompanhamento Intermediário</a></div>
+<div class="item_lista"><span class="circulo">&#9899;</span> <a href="{% url 'lista_feedback' %}">Comentários Finais</a></div>
+<br>
 
 <h5>Feedbacks dos Estudantes</h5>
-<ul>
-  <li><a data-toggle="tooltip" data-html="true" animation="true" title="Consultar coordenador para dados">Acompanhamento Externo</a></li>
-  <li><a href="{% url 'lista_feedback_estudantes' %}">Acompanhamento Final</a></li>
-</ul>
+<div class="item_lista"><span class="circulo">&#9899;</span> <a data-toggle="tooltip" data-html="true" animation="true" title="Consultar DEA/Coordenador para dados">Acompanhamento Externo</a></div>
+<div class="item_lista"><span class="circulo">&#9899;</span> <a href="{% url 'lista_feedback_estudantes' %}">Acompanhamento Final</a></div>
+<br>
 
 <h5>Avaliações</h5>
 <ul>
@@ -38,7 +26,6 @@
       <a href="{% url 'objetivos_rubricas' %}"><li>Objetivos de Aprendizado e Rubricas</li></a>
       <a href="{% url 'exames_pesos' %}"><li>Exames e Pesos</li></a>
       <a href="{% url 'exibir_ocultar_notas' %}"><li>Exibir ou Ocultar Notas</li></a>
-
     </ul>
   </li>
   
