--- a/documentos/templates/documentos/index_documentos.html
+++ b/documentos/templates/documentos/index_documentos.html
@@ -6,22 +6,13 @@
 {% endcomment %}
 
 {% block head %}
-  <style>
-    ul {
-      width: fit-content;
-      margin: 0px;
-      padding-left: 1.4em;
-    }
-    @media screen and (max-width: 800px) {
-      h5 {
-        font-size: 1.1rem;
-      }
-    }
-  </style>
+  {% load static %}
+  <link rel="stylesheet" href="{% static 'css/indexes.css' %}">
+  <script>{% include "tooltip.js" %}</script>
+  {% include "reload.html" %}
 {% endblock %}
 
 {% block content %}
-<br>
 <span class="titulo">{{ titulo }}
   {% if user.tipo_de_usuario == 4 %}
     <small class="esconder">
