--- a/estudantes/templates/estudantes/index_estudantes.html
+++ b/estudantes/templates/estudantes/index_estudantes.html
@@ -6,7 +6,14 @@
   Data: 15 de Maio de 2019
 {% endcomment %}
 
+{% block head %}
+  {% load static %}
+  <link rel="stylesheet" href="{% static 'css/indexes.css' %}">
+  <script>{% include "tooltip.js" %}</script>
+  {% include "reload.html" %}
+{% endblock %}
+
 {% block content %}
-<br>
+<span class="titulo">Estudantes</span>
 {% include "estudantes/estudantes.html" %}
 {% endblock %}
