--- a/operacional/templates/operacional/index_operacional.html
+++ b/operacional/templates/operacional/index_operacional.html
@@ -5,7 +5,14 @@
   Data: 15 de Maio de 2019
 {% endcomment %}
 
+{% block head %}
+  {% load static %}
+  <link rel="stylesheet" href="{% static 'css/indexes.css' %}">
+  <script>{% include "tooltip.js" %}</script>
+  {% include "reload.html" %}
+{% endblock %}
+
 {% block content %}
-<br>
+<span class="titulo">Operacional</span>
 {% include "operacional/operacional.html" %}
 {% endblock %}
