--- a/organizacoes/templates/organizacoes/organizacoes.html
+++ b/organizacoes/templates/organizacoes/organizacoes.html
@@ -4,19 +4,16 @@
   Data: 8 de Março de 2020
 {% endcomment %}
 
+
 <h5>Propostas</h5>
-<ul>
-  <li><a href="{% url 'proposta_submissao' %}">Submeter Proposta de Projeto</a></li>
-  <li><a href="{% url 'carrega_proposta' %}">Carrega Proposta de Projeto em PDF</a></li>
-  <li><a href="{% url 'parceiro_propostas' %}">Propostas Submetidas</a></li>
-</ul>
+<div class="item_lista"><span class="circulo">&#9899;</span> <a href="{% url 'proposta_submissao' %}">Submeter Proposta de Projeto</a></div>
+<div class="item_lista"><span class="circulo">&#9899;</span> <a href="{% url 'carrega_proposta' %}">Carrega Proposta de Projeto em PDF</a></div>
+<div class="item_lista"><span class="circulo">&#9899;</span> <a href="{% url 'parceiro_propostas' %}">Propostas Submetidas</a></div>
+<br>
 
 <h5>Projetos</h5>
-<ul>
-  <li><a href="{% url 'parceiro_projetos' %}">Lista de Projetos</a></li>
-</ul>
+<div class="item_lista"><span class="circulo">&#9899;</span> <a href="{% url 'parceiro_projetos' %}">Lista de Projetos</a></div>
+<br>
 
 <h5>Feedbacks</h5>
-<ul>
-  <li><a href="{% url 'projeto_feedback' %}">Enviar feedback de projeto</a></li>
-</ul>
+<div class="item_lista"><span class="circulo">&#9899;</span> <a href="{% url 'projeto_feedback' %}">Enviar feedback de projeto</a></div>
