--- a/projetos/templates/projetos/projetos.html
+++ b/projetos/templates/projetos/projetos.html
@@ -5,11 +5,9 @@
 {% endcomment %}
 
 
-<a href="{% url 'projetos_fechados' %}"><h5>Listagem Geral</h5></a>
-<hr>
+<a href="{% url 'projetos_fechados' %}">Listagem Geral</a>
+<br><br>
 
 <h5>Análises</h5>
-<ul>
-  <a href="{% url 'projetos_vs_propostas' %}"><li>Organizações, Projetos e Propostas</li></a>
-  <a href="{% url 'filtro_projetos' %}"><li>Filtro para Projetos</li></a>
-</ul>
+<div class="item_lista"><span class="circulo">&#9899;</span> <a href="{% url 'projetos_vs_propostas' %}">Organizações, Projetos e Propostas</a></div>
+<div class="item_lista"><span class="circulo">&#9899;</span> <a href="{% url 'filtro_projetos' %}">Filtro para Projetos</a></div>
