--- a/templates/base.html
+++ b/templates/base.html
@@ -70,8 +70,11 @@
       {% if user.is_authenticated %}&nbsp;<u onclick="location.href='{{ url_perfil }}'" id="username">[{{user.get_full_name}}]</u>{% endif %}
     </a>
     
-    <div id="myLinks">
+    <div id="myLinks" class="links-container">
       {% if user.is_authenticated %}
+
+        <a href="{% url 'perfil'%}">Perfil</a>
+
         <a href="{% url 'index'%}">Geral</a>
         <a href="{% url 'calendario'%}">Calendário</a>
         
