--- a/users/templates/users/professor_detail.html
+++ b/users/templates/users/professor_detail.html
@@ -151,6 +151,13 @@
     </div>
   {% endif %}
 
+  {% if estilos_usuario %}
+    <br><hr>
+    <h4>Estilos de Comunicação</h4>
+    {% include "tabela_estilos.html" %}<br>
+    <br>
+  {% endif %}
+
   {% if user.tipo_de_usuario == 4 %}
     <a href="{% url 'edita_usuario' professor.user.id %}">
       <button class="btn btn-primary mb-1" style="float: right;">Editar</button>
