--- a/users/templates/users/professor_detail.html
+++ b/users/templates/users/professor_detail.html
@@ -151,12 +151,14 @@
     </div>
   {% endif %}
 
-  {% if estilos_usuario %}
+  {% if estilos_respostas %}
     <br><hr>
     <h4>Estilos de Comunicação</h4>
-    {% include "tabela_estilos.html" %}<br>
+    {% include "tabela_estilos.html" with usuario=professor.user %}<br>
+    {% for metrica, valor in estilos_respostas.items %}
+      <strong>{{ metrica }}:</strong> {{ valor }}<br>
+    {% endfor %}
     <br>
-    
   {% endif %}
 
   {% if user.tipo_de_usuario == 4 %}
