atualizando texto comunicações

--- a/estudantes/templates/estudantes/estilo_comunicacao.html
+++ b/estudantes/templates/estudantes/estilo_comunicacao.html
@@ -33,8 +33,12 @@
   <span class="titulo">{{ titulo }}</span>
 
   <div class="explanatory-text">
-    Ordene as opções de acordo com a sua autopercepção dentro do mesmo bloco.<br>
+    Para cada um dos blocos, ordene na coluna de respostas as afirmações especificadas na coluna pergunta.
+    Para isso considere a sua autoperpção em relação a cada afirmação. 
     Mova para a parte superior a afirmacao que mais te representa e para a parte inferior a que menos te representa.
+    Lembre-se que este assessment é confidencial e particular, portanto foque em responder de forma sincera e honesta.
+    Ao concluir, você receberá um relatório com os resultados por e-mail.
+    Leve para a aula o seu resultado.
   </div>
 
   <form method="post">{% csrf_token %}
