--- a/documentos/templates/documentos/relatorios_publicos.html
+++ b/documentos/templates/documentos/relatorios_publicos.html
@@ -80,7 +80,7 @@
           {% if relatorio.link or relatorio.documento and relatorio.projeto %}
 
             <tr class="item" data-lingua="{% if relatorio.lingua_do_documento == 0 %}portugues{% elif relatorio.lingua_do_documento == 1 %}ingles{% endif %}">
-              <td>
+              <td> {% comment %} Projeto {% endcomment %}
                 {% if relatorio.projeto %}
                   {% if user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %}
                     <a href="{% url 'projeto_completo' relatorio.projeto.id %}">
@@ -94,7 +94,7 @@
                 {% if relatorio.lingua_do_documento == 0 %}<small lang="pt"></small><small lang="en">(portuguese)</small>{% elif relatorio.lingua_do_documento == 1 %}<small lang="pt">(inglês)</small><small lang="en"></small>{% endif %}
               </td>
 
-              <td>
+              <td> {% comment %} Estudante {% endcomment %}
                 {% if relatorio.projeto %}
                   {% for alocacao in relatorio.projeto.alocacao_set.all %}
                     {% if user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %}
@@ -109,7 +109,7 @@
                 {% endif %}
               </td>
 
-              <td>
+              <td> {% comment %} Orientador {% endcomment %}
                 {% if relatorio.projeto and relatorio.projeto.orientador %}
                   {% if relatorio.projeto.orientador %}
                     {% if user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %}
@@ -123,7 +123,7 @@
                 {% endif %}
               </td>
 
-              <td>
+              <td> {% comment %} Organização {% endcomment %}
                 {% if relatorio.projeto and relatorio.projeto.organizacao %}
                   {% if user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %}
                     <a href="{% url 'organizacao_completo' relatorio.projeto.organizacao.id %}">
@@ -135,7 +135,7 @@
                 {% endif %}
               </td>
 
-              <td>
+              <td> {% comment %} Banca Final {% endcomment %}
                 <small>
                 <ul class="grupo" style="padding-left: 20px;margin-bottom: 0px;">
                 {% for banca in relatorio.projeto.banca_set.all %}
@@ -157,30 +157,48 @@
                 </small>
               </td>
 
-              <td style="text-align:center">
+              <td style="text-align:center"> {% comment %} Período {% endcomment %}
                 {% if relatorio.projeto %}
                   {{relatorio.projeto.ano}}.{{relatorio.projeto.semestre}}
                 {% endif %}
               </td>
 
-              <td style="text-align:center">
-                  {% if relatorio.link%}
-                    <a class="btn btn-light btn-outline-info btn-sm" style="margin-bottom: 5px;" 
-                      href="{{relatorio.link}}" target="_blank" rel="noopener noreferrer">
-                      <span class="short-text" style="width: 4em;">DSpace</span>
-                      <span class="full-text" style="width: 12em;">Link&nbsp;Biblioteca&nbsp;(DSpace)</span>
-                    </a><br>
-                  {% endif %}
+              <td style="text-align:center"> {% comment %} Documento {% endcomment %}
+                  <span id="p{{relatorio.pk}}">
+                    {% if relatorio.link %}
+                      <a class="btn btn-light btn-outline-info btn-sm" style="margin-bottom: 5px;; white-space: nowrap;"
+                        href="{{relatorio.link}}" target="_blank" rel="noopener noreferrer">
+                        <span class="short-text" style="width: 4em;">DSpace</span>
+                        <span class="full-text" style="width: 12em;">Link&nbsp;Biblioteca&nbsp;(DSpace)</span>
+                        {% if user.tipo_de_usuario == 4 %}
+                          <span class="open-modal" data-url="{% url 'biblioteca_link' %}{{relatorio.pk}}">
+                            <i class="fas fa-pencil-alt"></i>
+                        </span>
+                        {% endif %}
+                      </a><br>
+                    {% endif %}
+                  </span>
                   {% if relatorio.documento %}
                     <a class="btn btn-light btn-outline-info btn-sm"
                       href="{{request.scheme}}://{{request.get_host}}{{relatorio.documento.url}}" target="_blank" rel="noopener noreferrer">
                       <span class="short-text" style="width: 4em;">Servidor</span>
                       <span class="full-text" style="width: 12em;">Link&nbsp;alternativo&nbsp;(Servidor)</span>
                     </a>
+                    {% if user.tipo_de_usuario == 4 and not relatorio.link %}
+                      <a id="c{{relatorio.pk}}"
+                        class="btn btn-warning btn-outline-dark btn-sm open-modal"
+                        href="{% url 'biblioteca_link' relatorio.pk %}"
+                        data-url="{% url 'biblioteca_link' %}{{relatorio.pk}}"
+                        target="_blank" rel="noopener noreferrer">
+                        <span class="short-text" style="width: 4em;">+&nbsp;DSpace</span>
+                        <span class="full-text" style="width: 12em;">Adicionar&nbsp;link&nbsp;Biblioteca</span>
+                      </a>
+                    {% endif %}
                   {% endif %}
+
               </td>
 
-              <td>
+              <td> {% comment %} URLs {% endcomment %}
                 {% if relatorio.link%}
                   <a href="{{relatorio.link}}" target="_blank" rel="noopener noreferrer">
                     <span>{{relatorio.link}}</span>
@@ -244,9 +262,14 @@
     window.onload = carrega_site
   </script>
 
+  {% include "janelas-modal.html" %}
+
+
   {% include "edicoes_ajax.html" with tabela="Relatorios" %}
 
   {% comment %} Sistema de controle de exibição de linguas. {% endcomment %}
   {% include "linguas.html" %}
+
+   
 
 {% endblock %}
