bullet menor para tabela documentos

--- a/documentos/templates/documentos/tabela_documentos.html
+++ b/documentos/templates/documentos/tabela_documentos.html
@@ -23,7 +23,7 @@
   
     ul li::before, ol li::before {
       position: absolute;
-      content: '\25CF';
+      content: '\2022';
       left: 0;
     }
   </style>
